Fix text alignment within a button (#3133)

--- a/hypha/static_src/src/sass/apply/components/_button.scss
+++ b/hypha/static_src/src/sass/apply/components/_button.scss
@@ -5,7 +5,6 @@
     background-image: none;
     border: 0;
     box-shadow: none;
-    line-height: 1.15;
 
     &:hover {
         cursor: pointer;
